[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csoai-governance-crosswalk-mcp"
version = "1.0.0"
description = "CSOAI Governance Crosswalk MCP — 12 global AI frameworks mapped through the CSOAI Partnership Charter's 52 articles. The world's first operational Constitutional AI governance crosswalk. Built by MEOK AI Labs / CSOAI."
authors = [{name="MEOK AI Labs / CSOAI", email="nicholas@meok.ai"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = [
    "mcp", "mcp-server", "model-context-protocol", "claude", "ai-tools",
    "meok-ai-labs", "csoai", "governance", "compliance", "crosswalk",
    "eu-ai-act", "nist", "iso-42001", "gdpr", "ai-safety",
    "constitutional-ai", "regulatory", "audit", "risk-management",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/csoai-governance-crosswalk-mcp"
Documentation = "https://meok.ai/docs/csoai-governance-crosswalk-mcp"
"Bug Tracker" = "https://github.com/CSOAI-ORG/csoai-governance-crosswalk-mcp/issues"
